K8S/commands-depl.yaml
#Deployment - машина создающая, управляющая Pod'ами
#ClusterIP - сервис или адресс по которому можно достучаться из Ingress Controller в Pod commands
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: simonzhigailo/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
